# idpic

./: CMakeLists.txt  compare.cpp  trans.cpp
conf/: jpeg.txt
